Fixed flash messages from not showing up

--- a/app/assets/stylesheets/spree/frontend/home.css.scss
+++ b/app/assets/stylesheets/spree/frontend/home.css.scss
@@ -20,3 +20,40 @@
 
 
 
+/*--------------------------------------*/
+/* Flash notices & errors
+/*--------------------------------------*/
+.flash {
+  padding: 10px;
+  color: #FFFFFF;
+  font-weight: bold;
+  margin-bottom: 10px;
+
+  &.notice {
+    background-color: #00ADEE;
+  }
+  &.success {
+    background-color: #8dba53;
+  }
+  &.error {
+    background-color: #e45353;
+  }
+}
+
+.errorExplanation {
+  @extend .flash.error;
+  @extend .flash;
+
+  p {
+    font-weight: normal;
+  }
+
+  ul {
+    list-style: disc outside;
+    margin-left: 30px;
+
+    li {
+      font-weight: normal;
+    }
+  }
+}
